--- a/Exercicíos/ex022/fundo06.html
+++ b/Exercicíos/ex022/fundo06.html
@@ -7,13 +7,15 @@
     <title>Posicionamento</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-
+           */
+           background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed ;
+           background-size: cover;
 
         }
 
