--- a/desafios/dsf011/index.html
+++ b/desafios/dsf011/index.html
@@ -64,7 +64,7 @@
 
     <section class="imagem">
         <p>
-            enho saudade das cartas <br>
+            Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
             Só chegava no Verão <br>
