--- a/Exercicíos/ex025/formulario04.html
+++ b/Exercicíos/ex025/formulario04.html
@@ -1,32 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relembrando</title>
+    <title>Area do aluno</title>
 </head>
 <body>
-    <h1>Ambiente do aluno</h1>
-    <form action="form.php" method="get" autocomplete="on">
-        <p>
-            <label for="nome">Nome: </label>
-            <input type="text" name="inome" id="iname" placeholder="Isira seu nome" autocomplete="name">
-        </p>
-        <p>
-            <label for="media">Média:</label>
-            <input type="number" name="num" id="inum" required step="0.1" placeholder="Exemplo: 6,5" maxlength="5">
-        </p>
-        <p>
-            <label for="ano">Periodo letivo:</label>
-            <input type="month" name="mes" id="imes" value="2023-01">
-        </p>
+    <h1>Area do aluno</h1>
+    <form action="form.php" method="post" autocomplete="on" >
+
+        <fieldset>
+            <legend>Login</legend>
+            <p>
+                <label for="nome">Nome: </label>
+                <input type="text" name="inome" id="inome" autocomplete="name" minlength="3" maxlength="30" placeholder="Nome completo">
+            </p>
+            <p>
+                <label for="email">E-mail:</label>
+                <input type="email" name="iemail" id="iemail" autocomplete="email" placeholder="exemplo@exemplo.com">
+            </p>
+
+            <p>
+                <label for="senha">Senha: </label>
+                <input type="password" name="isenha" id="isenha" minlength="8" maxlength="15"placeholder="De 8 a 15 caracteres">
+            </p>
+        </fieldset>
+
+        <fieldset>
+            <legend> Dados Adicionais</legend>
+
+            <p>
+                <input type="radio" name="sexo" id="feminino"> <label for="feminino">Feminino</label>
+                <input type="radio" name="sexo" id="masculino"> <label for="masculino">Masculino</label>
+            </p>
+            <p>
+                <label for="itel">Telefone</label>
+                <input type="tel" name="tel" id="itel" pattern="[0-9]" >
+            </p>
+        </fieldset>
+        <fieldset>
+            <legend>Esportes</legend>
+
+            <p>
+                <input type="checkbox" name="fut" id="ifut" checked><label for="ifut"> Futebol</label><br>
+                <input type="checkbox" name="vol" id="ivol"><label for="ivol"> Vôlei</label><br>
+                <input type="checkbox" name="bas" id="ibas"><label for="ibas"> Basquete</label><br>
+                <input type="checkbox" name="tenis" id="itenis"> <label for="itenis">Tênis</label>
+            </p>
+        </fieldset>
+        
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
 
-        
+
     </form>
 </body>
 </html>
