--- a/Exercicíos/ex025/formulario008.html
+++ b/Exercicíos/ex025/formulario008.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +10,9 @@
     <h1>Exemplo de formulário</h1>
     <p>
         <label for="inum">Número: </label>
-        <input type="range" name="num" id="inum" min="0"
+        <input type="range" name="num" id="inum" min="0" oninput="ival.innerHTML = Number(inum.value)"
         max="10" value="5" one>
-        <output id="val">5</output>
+        <output id="ival">5</output>
     </p>
     <p>
         <input type="submit" value="Enviar">
